k8s/landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: ghcr.io/ginkodan/scrappy-landing:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: landing
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
